@@ -113,7 +113,7 @@ import|;
 end_import
 
 begin_comment
-comment|// TODO: the name of this class seems ridiculous
+comment|/**   * Velocity resource loader wrapper around Solr resource loader   */
 end_comment
 
 begin_class
@@ -178,6 +178,8 @@ name|loader
 operator|.
 name|openResource
 argument_list|(
+literal|"velocity/"
+operator|+
 name|template_name
 argument_list|)
 return|;
