@@ -78,6 +78,20 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|NamedList
@@ -633,69 +647,6 @@ operator|new
 name|VelocityEngine
 argument_list|()
 decl_stmt|;
-name|String
-name|template_root
-init|=
-name|request
-operator|.
-name|getParams
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"v.base_dir"
-argument_list|)
-decl_stmt|;
-name|File
-name|baseDir
-init|=
-operator|new
-name|File
-argument_list|(
-name|request
-operator|.
-name|getCore
-argument_list|()
-operator|.
-name|getResourceLoader
-argument_list|()
-operator|.
-name|getConfigDir
-argument_list|()
-argument_list|,
-literal|"velocity"
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|template_root
-operator|!=
-literal|null
-condition|)
-block|{
-name|baseDir
-operator|=
-operator|new
-name|File
-argument_list|(
-name|template_root
-argument_list|)
-expr_stmt|;
-block|}
-name|engine
-operator|.
-name|setProperty
-argument_list|(
-name|RuntimeConstants
-operator|.
-name|FILE_RESOURCE_LOADER_PATH
-argument_list|,
-name|baseDir
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|engine
 operator|.
 name|setProperty
@@ -736,7 +687,92 @@ argument_list|,
 name|resourceLoader
 argument_list|)
 expr_stmt|;
-comment|// TODO: Externalize Velocity properties
+name|File
+name|fileResourceLoaderBaseDir
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|String
+name|template_root
+init|=
+name|request
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"v.base_dir"
+argument_list|)
+decl_stmt|;
+name|fileResourceLoaderBaseDir
+operator|=
+operator|new
+name|File
+argument_list|(
+name|request
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getResourceLoader
+argument_list|()
+operator|.
+name|getConfigDir
+argument_list|()
+argument_list|,
+literal|"velocity"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|template_root
+operator|!=
+literal|null
+condition|)
+block|{
+name|fileResourceLoaderBaseDir
+operator|=
+operator|new
+name|File
+argument_list|(
+name|template_root
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|e
+parameter_list|)
+block|{
+comment|// no worries... probably in ZooKeeper mode and getConfigDir() isn't available, so we'll just ignore omit
+comment|// the file system resource loader
+block|}
+if|if
+condition|(
+name|fileResourceLoaderBaseDir
+operator|!=
+literal|null
+condition|)
+block|{
+name|engine
+operator|.
+name|setProperty
+argument_list|(
+name|RuntimeConstants
+operator|.
+name|FILE_RESOURCE_LOADER_PATH
+argument_list|,
+name|fileResourceLoaderBaseDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|engine
 operator|.
 name|setProperty
@@ -748,6 +784,22 @@ argument_list|,
 literal|"params,file,solr"
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|engine
+operator|.
+name|setProperty
+argument_list|(
+name|RuntimeConstants
+operator|.
+name|RESOURCE_LOADER
+argument_list|,
+literal|"params,solr"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// TODO: Externalize Velocity properties
 name|String
 name|propFile
 init|=
